# hacktoberfest-labeler-action

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  example.yml  hacktoberfest.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  semantic-release.yml  test.yml  upgrader.yml
src/: app.py
src/hacktoberfest_labeler/: __main__.py  cli.py
templates/: .changelog-old.md  CHANGELOG.md.j2
tests/: conftest.py  test_app.py  test_cli.py
