[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[tool.ruff]
target-version = "py39"
line-length = 88

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "tests", "src" ]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=src"

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
upload_to_pypi = false
upload_to_release = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[dependency-groups]
dev = []

[project]
authors = [
    {name = "Bruno Alla", email = "alla.brunoo@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "environs<12.0.0,>=11.0.0",
    "PyGithub<3.0.0,>=2.0.0",
]
name = "hacktoberfest-labeler-action"
version = "2.3.0"
description = "A Github Action to automate Hacktoberfest"
readme = "README.md"
keywords = [
    "github",
    "actions",
    "hacktoberfest",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

[project.urls]
repository = "https://github.com/browniebroke/hacktoberfest-labeler-action"